# nanochat-ascend

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  README.md  main.py  mkdocs.yml  pyproject.toml  rsync-ckpt-from-a3.sh  rsync-code-a3.sh  rsync-code-to-a3.sh  rsync-dataset-a3.sh  rsync-dataset-to-a3.sh  rsync-output-from-a3.sh
assets/d20-chat-cli-videos/: d20-test1.webm  d20-test2.webm
configs/: a2.yaml  a3.yaml  global.yaml  local.yaml  servers.yaml
dev/: tiktoken_demo.py  tiktoken_list_encodings.txt  tiktoken_list_models.txt
dev/d20_eval_results/: base-model-evaluation.md  base-model-training.md  base_model_008300.csv  chat-evaluation-rl.md  chat-evaluation-sft.md  chat-rl.md  sft.md
dev/d32_eval_results/: base-model-evaluation.md  base-model-training-iter-from-11000-to-12500.md  base-model-training-iter-from-12500-14000.md  base-model-training-iter-from-1500-to-3000.md  base-model-training-iter-from-15000-to-16000.md  base-model-training-iter-from-16000-to-17000.md  base-model-training-iter-from-4500-to-6000.md  base-model-training-iter-from-6000-to-7500.md  base-model-training-iter-from-8000-to-9500.md  base_model_017000.csv  chat-evaluation-rl.md  chat-evaluation-sft.md  rl-model-eval-output.txt  sft-model-eval-output.txt
dev/hf/: tok_to_hf.py
dev/tok_eval_results/: tokenizer-evaluation.md  tokenizer-training.md
docs/: demo.md  index.md  model.md  overview.md  results.md  webdemo.md
docs/datasets/: base-evaluation.md  chat-evaluation.md  index.md  pretrain.md  rl.md  sft.md
docs/processes/: dataset-preparation.md  pretrain.md  rl.md  sft.md
nanochat/: checkpoint_manager.py  common.py  config.py  dataloader.py  dataset.py  engine.py  flash_attention.py  global_config.py  gpt.py  loss_eval.py  optim.py  report.py  tokenizer.py  ui.html
runs/: miniseries.sh  prepare_dataset.sh  run_base_eval.sh  run_base_train.sh  run_base_train_d32.sh  run_chat_cli.sh  run_chat_cli_d32.sh  run_cpu.sh  run_npu.sh  run_rl.sh  run_rl_d32.sh  run_rl_eval.sh  run_sft.sh  run_sft_d32.sh  run_sft_eval.sh  run_tok_train.sh  runcpu.sh  scaling_laws.sh  set_env.sh  speedrun.sh
scripts/: base_eval.py  base_train.py  chat_cli.py  chat_eval.py  chat_rl.py  chat_sft.py  chat_web.py  tok_eval.py  tok_train.py
skills/cpu-test/: SKILL.md
skills/data-view/: SKILL.md
skills/meta-test/: SKILL.md
tasks/: arc.py  customjson.py  gsm8k.py  humaneval.py  mmlu.py  smoltalk.py  spellingbee.py
tests/: conftest.py  test_dataset.py  test_global_config.py
tests/cpu/: test_base_eval_cpu.py  test_base_train_cpu.py  (+1 more)
(+6 files in other folders)
