[project]
name = "nanochat-ascend"
version = "0.1.0"
description = "training a nano ChatGPT via a 8*910C ascend npu node"
readme = "README.md"
requires-python = "~=3.11.0"
dependencies = [
    "numpy>=2.3.5",
    "pyarrow>=23.0.1",
    "tokenizers>=0.22.2",
    "torch==2.9.0",
    "wandb>=0.25.0",
]

[project.optional-dependencies]
cpu = [
    "torch>=2.9.0",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cpu"

[dependency-groups]
dev = [
    "ipython>=9.10.0",
]
