[project]
name = "nanochat-ascend"
version = "0.1.0"
description = "training a nano ChatGPT via an A2 (8*910B) or an A3 (16*910C) ascend npu node"
readme = "README.md"
requires-python = "~=3.11.0"
dependencies = [
    "numpy>=2.3.5",
    "psutil>=7.2.2",
    "pyarrow>=23.0.1",
    "rustbpe>=0.1.0",
    "setuptools>=70.2.0",
    "tiktoken>=0.12.0",
    "tokenizers>=0.22.2",
    "torch==2.9.0",
    "wandb>=0.25.0",
]

[project.optional-dependencies]
cpu = []
npu = [
    "attrs>=25.4.0",
    "scipy>=1.17.0",
    "torch-npu==2.9.0",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cpu"

[dependency-groups]
dev = [
    "ipython>=9.10.0",
]
