[project]
name = "nanochat-ascend"
version = "0.1.0"
description = "training a nano ChatGPT via an A2 (8*910B) or an A3 (16*910C) ascend npu node"
readme = "README.md"
requires-python = "~=3.11.0"
dependencies = [
    "datasets>=4.5.0",
    "numpy>=2.3.5",
    "PyYAML>=6.0.0",
    "psutil>=7.2.2",
    "pyarrow>=23.0.1",
    "rustbpe>=0.1.0",
    "setuptools>=70.2.0",
    "tiktoken>=0.12.0",
    "tokenizers>=0.22.2",
    "wandb>=0.25.0",
]

[project.optional-dependencies]
cpu = [
    "torch==2.9.0",
]
npu = [
    "attrs>=25.4.0",
    "scipy>=1.17.0",
    "torch-npu==2.9.0",
]


[[tool.uv.index]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

#[[tool.uv.index]]
#name = "pypi"
#url = "https://pypi.org/simple"

#[[tool.uv.index]]
#name = "pytorch-cpu"
#url = "https://download.pytorch.org/whl/cpu"

#[tool.uv.sources]
#torch = { index = "pytorch-cpu" }

[dependency-groups]
dev = [
    "ipython>=9.10.0",
    "pytest",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "meta: shape-only tests that run on PyTorch meta device",
    "cpu: very small CPU execution tests",
    "npu: Ascend NPU tests intended for manual execution on NPU machines",
]
